<resources>
    <string name="app_name">Happy Days</string>

    <string name="text_placeholder">Placeholder</string>
    <string name="channel_name">Happy Days Channel</string>
    <string name="navigation_selected">▬</string>
    <string name="logo_description">Happy Days Logo (Gradient)</string>

    <!--Onboarding-->
    <string name="back_btn">Back</string>
    <string name="next_btn">Next</string>
    <string name="get_started_btn">Get Started</string>

    <!--Initialization-->
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="prompt1">What should we call you?</string>
    <string name="prompt2">Pick 3 Favourites from Each Category</string>

    <string name="submit">Submit</string>

    <!--Fragment Titles-->
    <string name="menu_title">Menu</string>
    <string name="logs_title">Logs</string>
    <string name="profile_title">Profile</string>
    <string name="activities_title">Activities</string>

    <!--Menu Items-->
    <string name="about_label">About</string>
    <string name="developers_label">Developers</string>
    <string name="restart_label">Restart</string>

    <!--Home Fragment-->
    <string name="hello_user">Hello</string>
    <string name="prompt_type_day">What\'s your day going to be like?</string>
    <string name="super_busy_label">Super Busy</string>
    <string name="normal_label">Normal</string>
    <string name="chill_label">Chill</string>

    <!--Profile Fragment-->
    <string name="favourites_label">Favourites</string>
    <string name="fav_mental_label">Mental Activities</string>
    <string name="fav_physical_label">Physical Activities</string>

    <!--Activities Fragment-->
    <string name="mental_label">Mental</string>
    <string name="physical_label">Physical</string>
    <string name="desc_reading">Reading</string>
    <string name="desc_meditating">Meditating</string>
    <string name="desc_mindmap">Mind Map</string>
    <string name="desc_stretching">Stretching</string>
    <string name="desc_journaling">Journaling</string>
    <string name="desc_biking">Biking</string>
    <string name="desc_running">Running</string>
    <string name="desc_workout">Work Out</string>
    <string name="desc_walking">Walking</string>

    <!-- Activity Prompt Fragment -->
    <string name="text_prompt1">Welcome back!</string>
    <string name="text_prompt2">Why not try…</string>
    <string name="label_start">Start</string>
    <string name="label_stop">No Thanks</string>
    <string name="label_another">Pick Another</string>
    <string name="activity_logo_base">Activity Logo Base</string>
    <string name="activity_logo_image">Activity Logo Image</string>
    <string name="prompt_start">STARTING NEW ACTIVITY</string>

    <!-- Activity Detail Fragment -->
    <string name="prompt_inprogress">ACTIVITY IN PROGRESS</string>
    <string name="btn_routes">Routes</string>
    <string name="btn_finish">Finish</string>

    <!-- Activity Finish Fragment -->
    <string name="text_notes">Notes:</string>
    <string name="text_finished">FINISHED!</string>
    <string name="label_response">How did it go?</string>
    <string name="text_save">Save</string>
    <string name="mood_5_button">Mood 5 Button</string>
    <string name="mood_4_button">Mood 4 Button</string>
    <string name="mood_3_button">Mood 3 Button</string>
    <string name="mood_1_button">Mood 1 Button</string>
    <string name="mood_2_button">Mood 2 Button</string>

    <!-- Activity Browse Fragment -->
    <string name="text_routes">Routes</string>
    <string name="text_no_route">No Route</string>

    <!--Notifications-->
    <string name="note_title">Happy Days</string>
    <string name="note_checkin">Ready to start your day?</string>
    <string name="note_walking">Maybe its time to stretch your legs?</string>
    <string name="note_biking">A bike ride might be pretty nice right about now.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- MapBox Access Token -->
    <string name="access_token">pk.eyJ1IjoiYWx2YXJ2aWt0b3IiLCJhIjoiY2pueXVhMTQxMHNxejNrbDZ4MnZnY3VhaSJ9.0PzIj-YLF8uC0dOtzGNx-g</string>
    <string name="title_activity_route_map">RouteMapActivity</string>
</resources>
