<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="113dp"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_happydays_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="16dp"
        android:text="@string/hello_user"
        android:textAppearance="@style/FragmentSubTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/prompt_type_day"
        android:textAppearance="@style/heading1"
        app:layout_constraintEnd_toEndOf="@+id/home_first_name"
        app:layout_constraintStart_toStartOf="@+id/home_first_name"
        app:layout_constraintTop_toBottomOf="@+id/home_first_name" />

    <TextView
        android:id="@+id/home_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User_Name"
        android:textAppearance="@style/FragmentTitle"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/checkin_superbusy"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/square_btn"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="checkin"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkin_normal" />

    <Button
        android:id="@+id/checkin_normal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/square_btn"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="checkin"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/checkin_chill"
        app:layout_constraintStart_toEndOf="@+id/checkin_superbusy"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/checkin_chill"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/square_btn"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="checkin"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkin_normal" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/super_busy_label"
        app:layout_constraintEnd_toEndOf="@+id/checkin_superbusy"
        app:layout_constraintStart_toStartOf="@+id/checkin_superbusy"
        app:layout_constraintTop_toBottomOf="@+id/checkin_superbusy" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/normal_label"
        app:layout_constraintEnd_toEndOf="@+id/checkin_normal"
        app:layout_constraintStart_toStartOf="@+id/checkin_normal"
        app:layout_constraintTop_toBottomOf="@+id/checkin_normal" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/chill_label"
        app:layout_constraintEnd_toEndOf="@+id/checkin_chill"
        app:layout_constraintStart_toStartOf="@+id/checkin_chill"
        app:layout_constraintTop_toBottomOf="@+id/checkin_chill" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/square_btn"
        android:backgroundTint="@color/colorLogoBlue"
        android:onClick="submit"
        android:text="@string/submit"
        android:textAppearance="@style/heading1"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.120000005" />

</android.support.constraint.ConstraintLayout>